# komaru

./: .clang-format  .clang-tidy  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
catlib/cpp/: catlib.hpp
cmake/: CXXFlags.cmake  CXXSetup.cmake  Utils.cmake
examples/: cube.cat  cube2.cat  fib.cat  if.cat  io101.cat  print.cat  win.cat
komaru/editor/: block.cpp  block.hpp  connection.cpp  connection.hpp  grid.cpp  grid.hpp  grid_scene.cpp  grid_scene.hpp  grid_view.cpp  grid_view.hpp  gui.hpp  gui_element.hpp  gui_math.cpp  gui_math.hpp  imgui_window_guard.cpp  imgui_window_guard.hpp  imgui_window_manager.cpp  imgui_window_manager.hpp  link.cpp  link.hpp  main.cpp  main_window.cpp  main_window.hpp  node.cpp  node.hpp  node_editor.cpp  node_editor.hpp  os_window.cpp  os_window.hpp  pin.cpp  pin.hpp  text.cpp  text.hpp  top_down_camera.cpp  top_down_camera.hpp
komaru/editor/kimgui/: imgui_child_guard.cpp  imgui_child_guard.hpp  imgui_id_allocator.hpp  imgui_id_guard.cpp  imgui_id_guard.hpp  imgui_window_guard.cpp  imgui_window_guard.hpp
komaru/lang/: cat_program.cpp  cat_program.hpp  category.cpp  category.hpp  guard.cpp  guard.hpp  literal.cpp  literal.hpp  morphism.cpp  morphism.hpp  morphism_registry.cpp  morphism_registry.hpp  pattern.cpp  pattern.hpp  style.hpp  type.cpp  type.hpp  type_registry.cpp  type_registry.hpp  value.cpp  value.hpp
komaru/parsers/: cat_type_lexer.cpp  cat_type_lexer.hpp  cat_type_parser.cpp  cat_type_parser.hpp  hs_type_lexer.cpp  hs_type_lexer.hpp  hs_type_parser.cpp  hs_type_parser.hpp  morphism_lexer.cpp  morphism_lexer.hpp  morphism_parser.cpp  morphism_parser.hpp  parser_result.hpp  pattern_lexer.cpp  pattern_lexer.hpp  pattern_parser.cpp  pattern_parser.hpp
komaru/translate/: cat_cooking.cpp  cat_cooking.hpp  cat_uncooking.cpp  cat_uncooking.hpp  cpp_program.cpp  cpp_program.hpp  cpp_translator.cpp  cpp_translator.hpp  exec_program.cpp  exec_program.hpp  graphviz.cpp  graphviz.hpp  program.hpp  raw_cat_program.cpp  raw_cat_program.hpp  simple_symbols_registry.cpp  simple_symbols_registry.hpp  symbols_registry_like.hpp  translator.hpp
komaru/translate/common/: cond.cpp  cond.hpp
komaru/translate/cpp/: cpp_body_builder.cpp  cpp_body_builder.hpp  cpp_cond.cpp  cpp_cond.hpp  cpp_expr.cpp  cpp_expr.hpp  cpp_function.hpp  cpp_function_builder.cpp  cpp_function_builder.hpp  cpp_literal.cpp  cpp_literal.hpp  cpp_program.cpp  cpp_program.hpp  cpp_program_builder.cpp  cpp_program_builder.hpp  cpp_translator.cpp  cpp_translator.hpp  cpp_types.cpp  cpp_types.hpp  cpp_value.cpp  cpp_value.hpp
komaru/translate/haskell/: ghci.cpp  ghci.hpp  hs_brancher.cpp  hs_brancher.hpp  hs_definition.cpp  hs_definition.hpp  hs_expr.cpp  hs_expr.hpp  hs_expr_builder.cpp  hs_expr_builder.hpp  hs_func_translation_req.cpp  hs_func_translation_req.hpp  hs_import.cpp  hs_import.hpp  hs_program.cpp  hs_program.hpp  hs_program_builder.cpp  hs_program_builder.hpp  hs_symbols_registry.cpp  hs_symbols_registry.hpp  hs_translator.cpp  hs_translator.hpp
komaru/util/: cli.cpp  cli.hpp  cli_program_manipulator.cpp  cli_program_manipulator.hpp  defer.hpp  derive_variant.hpp  dummy.cpp  exchangeable.hpp  filesystem.cpp  filesystem.hpp  non_copyable.hpp  non_copyable_non_movable.hpp  non_movable.hpp  random.cpp  random.hpp  range.hpp  std_extensions.cpp  std_extensions.hpp  string.cpp  string.hpp  unix_fd.hpp
playground/: playground.cpp
test/: .clang-tidy  imgui_node_graph_test.cpp
test/lang/: test_literals.cpp  test_morphisms.cpp  test_type_registry.cpp  test_types.cpp  test_values.cpp
test/parsers/: test_cat_type_parser.cpp  test_hs_type_parser.cpp  test_morphism_parser.cpp  test_pattern_parser.cpp
test/translate/: common.cpp  common.hpp  program_utils.cpp  program_utils.hpp  programs.cpp  programs.hpp  test_cond.cpp  test_cooking.cpp  test_cpp_cond.cpp  test_cpp_translator.cpp  test_ghci.cpp  test_hs_translator.cpp
